--- a/_config.yml
+++ b/_config.yml
@@ -261,9 +261,12 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: # true
-      share: true
+      read_time: #true
+      comments: true
+      # share: true
       related: true
       show_date: true
+      sidebar:
+        nav: "categories"
+
 date_format: "%Y-%m-%d"
