--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,11 @@
 main:
   - title: "Home"
     url: /
-  - title: "Category"
-    url: /categories/
-  - title: "Tag"
-    url: /tags/
+  - title: "About"
+    url: /about/
+  - title: "GitHub"
+    url: https://github.com/KimNora07
+  
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -14,3 +15,7 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+categories:
+  - title: "Game"
+    url: /categories/Game/
