--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,6 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
 
-docs:
+sidebar-category:
   - title: "Game"
-    url: /categories/Game/
+    url: /Game
