--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,5 +17,6 @@ main:
   #   url: /sitemap/
 
 sidebar-category:
-  - title: "Game"
-    url: /Game
+  - title: "Unity"
+    url: "/unity"
+    category: "Unity"
