--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 # Site Settings
 locale                   : "ko-KR"
 title                    : "노라의 작업실"
-title_separator          : "|"
+title_separator          : "-"
 subtitle                 : "Version 1.0"
 name                     : "노라"
 description              : "연습한 프로그래밍 코드를 올리거나 게임 정보관련해서 올리는 블로그입니다"
@@ -265,8 +265,7 @@ defaults:
       comments: # true
       share: true
       related: true
-      sidebar:
-        nav: "sidebar-category"
+      sidebar_main: true
       show_date: true
 
 date_format: "%Y-%m-%d"
