Feat: 곡괭이 키우기 개발노트 #1

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,3 +20,6 @@ sidebar-category:
   - title: "Unity"
     url: "/unity"
     category: "Unity"
+  - title: "DevLog"
+    url: "/devlog"
+    category: "DevLog"
