--- a/_config.yml
+++ b/_config.yml
@@ -105,8 +105,8 @@ analytics:
 # Site Author
 author:
   name             : "노라"
-  avatar           : "assets/images/Profile.png"
-  bio              : "Dev / Gamer"
+  avatar           : "assets/images/10MHutao.png"
+  bio              : "Developer"
   location         : "Korea"
   email            :
   links:
