Feat: 곡괭이 키우기 개발노트#2

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "노라의 작업실"
 title_separator          : "-"
 subtitle                 : "Version 1.0"
 name                     : "노라"
-description              : "연습한 프로그래밍 코드를 올리거나 게임 정보관련해서 올리는 블로그입니다"
+description              : "프로그래밍과 프로젝트에 관련된 포스트를 올리는 블로그입니다"
 url                      : "https://KimNora07.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "KimNora07/KimNora07.github.io"
