--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,6 @@ sidebar-category:
   - title: "Unity"
     url: "/unity"
     category: "Unity"
-  - title: "DevLog"
-    url: "/devlog"
-    category: "DevLog"
+  - title: "CodingTest"
+    url: "/codingtest"
+    category: "CodingTest"
